2013-07-14  Paul Smith  <psmith@gnu.org>

	* filedef.h (update_status): Convert UPDATE_STATUS from a char to
	an enumeration.  Some systems declare "char" to be "unsigned"
	which broke the code (which expected to be able to use -1 as a
	flag).  Using magic values was unpleasant, so rather than just
	force "signed char" I reworked it to use an enum.

	* dep.h (update_goal_chain): Return an update_status value not int.
	* remake.c (touch_file): Ditto.
	(update_goal_chain): Track the update_status enum.

	* file.c (enter_file): Use new enumeration values with update_status.
	(remove_intermediates): Ditto.
	(print_file): Ditto.
	* commands.c (execute_file_commands): Ditto.
	* job.c (reap_children): Ditto.
	(start_job_command): Ditto.
	(start_waiting_job): Ditto.
	* main.c (main): Ditto.
	* remake.c (update_file): Ditto.
	(complain): Ditto.
	(update_file_1): Ditto.
	(notice_finished_file): Ditto.
	(remake_file): Ditto.
	* vmsjobs.c (vmsHandleChildTerm): Ditto.

2013-07-09  Paul Smith  <psmith@gnu.org>

	* implicit.c (pattern_search): Keep a local copy of the number of
	deps in deplist: the global max might change due to recursion.
	Fixes a bug reported by Martin d'Anjou <martin.danjou14@gmail.com>.

2013-06-28  Paul Smith  <psmith@gnu.org>

	* misc.c (set_append_mode): Set the O_APPEND flag on a file descriptor.
	(open_tmpfd): Set append mode on the temporary file descriptor.
	* main.c (main): Set append mode on stdout and stderr.
	* makeint.h (set_append_mode): Declare it.

2013-06-22  Eli Zaretskii  <eliz@gnu.org>

	* build_w32.bat (LinkGCC): Prevent a comment from being displayed
	at build time.

	* job.c (construct_command_argv_internal) [WINDOWS32]: Use
	case-insensitive comparison with internal commands of non-Unix
	shells.

	* main.c (find_and_set_default_shell): Don't use file_exists_p or
	dir_file_exists_p, as those call readdir, which can fail if PATH
	includes directories with non-ASCII characters, and that would